# The_WALL-E_project

./: Punto1.py  README.md  serialarduinokey.ino  turtle_bot_teleop.py
install/: local_setup.sh  setup.sh
install/robot_taller2/lib/robot_taller2/: raspy_serial  robot_player
install/robot_taller2/share/robot_taller2/: package.dsv  package.sh  package.zsh
install/walle_pkg/lib/walle_pkg/: connection_serial  robot_interface  robot_player
install/walle_pkg/share/walle_pkg/: package.ps1  package.sh
log/: latest_build
ros2_ws/: Proyecto-Final-Robotica-202310-main(9)).tar.xz
ros2_ws/Walle_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/Walle_pkg/Walle_pkg/: Punto 3.py  robot_player.py  turtle_bot_teleop.py  turtlebot_player_client.py  walle_interface.py
ros2_ws/Walle_pkg/srv/: servicio.srv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/Walle_pkg/lib/Walle_pkg/: turtle_bot_teleop
ros2_ws/install/Walle_pkg/lib/walle_pkg/: turtle_bot_teleop = walle_pkg.turtle_bot_teleop:mainconnectionSerial = walle_pkg.connection_serial:mainturtle_bot_interface
ros2_ws/install/Walle_pkg/share/Walle_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/Walle_pkg/share/walle_pkg/: package.xml
ros2_ws/install/robot_taller2/lib/robot_taller2/: robot_interface  robot_teleop
ros2_ws/install/robot_taller2/share/robot_taller2/: package.sh
ros2_ws/install/walle_pkg/lib/walle_pkg/: Raspy_serial  robot_teleop  turtle_bot_teleop  walle_interface
ros2_ws/install/walle_pkg/share/walle_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/robot_taller2/: package.xml
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/robot_taller2/share/robot_taller2/: package.bash  package.ps1  package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/robot_taller2/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_taller2/robot_taller2/: robot_interface.py
ros2_ws/src/walle_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/walle_pkg/walle_pkg/: Raspy_serial.py  turtle_bot_teleop.py
ros2_ws/walle_pkg/: package.xml  setup.py
ros2_ws/walle_pkg/walle_pkg/: algo.txt  connection_serial.py  robot_player_cliente.py  robot_player_servidor.py  turtle_bot_teleop_l.py  turtle_bot_teleop_t.py  turtlebot_player_serv.py
