<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Walle_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="je.cardona@uniandes.edu.co">juan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>Walle_pkg/servicio</build_depend>
  <build_depend>Walle_pkg/walle_interface</build_depend>
  <build_depend>Walle_pkg/connection_serial</build_depend>

  <exec_depend>Walle_pkg/servicio</exec_depend>
  <exec_depend>Walle_pkg/walle_interface</exec_depend>
  <exec_depend>Walle_pkg/connection_serial</exec_depend>
  

  
  <exec_depend>Walle_pkg/servicio</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
