<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_taller2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="je.cardona@uniandes.edu.co">juan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> 

  <build_depend>robot_taller2/robot_interface</build_depend>
  <build_depend>robot_taller2/robot_player</build_depend>
  <build_depend>robot_taller2/robot_teleop</build_depend>
  <build_depend>robot_taller2/connection_serial</build_depend>
  
  <exec_depend>robot_taller2/robot_interface</exec_depend>
  <exec_depend>robot_taller2/robot_player</exec_depend>
  <exec_depend>robot_taller2/robot_teleop</exec_depend>
  <exec_depend>robot_taller2/connection_serial</exec_depend>

  <exec_depend>robot_taller2/srv/DoPath</exec_depend>
  <exec_depend>robot_taller2/srv/SavePath</exec_depend>
  <exec_depend>robot_taller2/msg/Float32MultiArray</exec_depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend> 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
