<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walle_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="je.cardona@uniandes.edu.co">juan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>walle_pkg/srv/DoPath</exec_depend>
  <exec_depend>walle_pkg/srv/SavePath</exec_depend>
  <exec_depend>walle_pkg/msg/Float32MultiArray</exec_depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend> 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing</exec_depend>


  <export>
    <build_type>ament_python</build_type>
    
    
  </export>
</package>
